# green-love

./: .gitignore  LICENSE  MANIFEST.in  PKG-INFO  README.md  pyproject.toml  try_it.py
src/green_love/: __init__.py  benchmarks.py  co2_equivalences.py  data_utils.py  estimator.py  location.py  power.py  report.py
src/green_love/data/: carbon_intensity.json  crusoe_pricing.json  electricity_prices.json  gpu_benchmarks.json
src/green_love/templates/: report.html
tests/: test_benchmarks.py  test_co2.py  test_estimator.py  test_location.py  test_power.py  test_report.py
